tests/baselines/reference/classStaticBlock22.errors.txt
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(16,5): error TS18037: Await expression cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(16,10): error TS1109: Expression expected.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(19,5): error TS18037: Await expression cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(28,14): error TS1005: ':' expected.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(31,9): error TS18037: Await expression cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(31,14): error TS1109: Expression expected.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(37,10): error TS18037: Await expression cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(37,15): error TS1109: Expression expected.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(53,5): error TS18037: Await expression cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(53,10): error TS1109: Expression expected.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(54,15): error TS1003: Identifier expected.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(54,15): error TS18037: Await expression cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(54,20): error TS1109: Expression expected.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(87,17): error TS18037: Await expression cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(87,22): error TS1109: Expression expected.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(87,24): error TS1005: ';' expected.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(88,17): error TS18037: Await expression cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts(88,23): error TS1109: Expression expected.


==== tests/cases/conformance/classes/classStaticBlock/classStaticBlock22.ts (18 errors) ====
    let await: "any";
    class C {
      static {
        let await: any; // illegal, cannot declare a new binding for await
      }
      static {
        let { await } = {} as any; // illegal, cannot declare a new binding for await
      }
      static {
        let { await: other } = {} as any; // legal
      }
      static {
        let await; // illegal, cannot declare a new binding for await
      }
      static {
        await; // illegal
        ~~~~~
!!! error TS18037: Await expression cannot be used inside class static block.
             ~
!!! error TS1109: Expression expected.
      }
      static {
        await(1); // illegal
        ~~~~~~~~
!!! error TS18037: Await expression cannot be used inside class static block.
      }
      static {
        function await() {}; // illegal
      }
      static {
        class await {}; // illegal
      }
      static {
        ({ await }); // illegal short-hand property reference
                 ~
!!! error TS1005: ':' expected.
      }
      static {
        ({ [await]: 1 }); // illegal
            ~~~~~
!!! error TS18037: Await expression cannot be used inside class static block.
                 ~
!!! error TS1109: Expression expected.
      }
      static {
        class D {
            await = 1; // legal
            x = await; // legal (initializers have an implicit function boundary)
            [await] = 1; // illegal (computed property names are evaluated outside of a class body
             ~~~~~
!!! error TS18037: Await expression cannot be used inside class static block.
                  ~
!!! error TS1109: Expression expected.
          };
      }
      static {
        (function await() {}); // legal, 'await' in function expression name not bound inside of static block
      }
      static {
        (class await {}); // legal, 'await' in class expression name not bound inside of static block
      }
      static {
        (function () { return await; }); // legal, 'await' is inside of a new function boundary
      }
      static {
        (() => await); // legal, 'await' is inside of a new function boundary
      }
      static {
        await: // illegal, 'await' cannot be used as a label
        ~~~~~
!!! error TS18037: Await expression cannot be used inside class static block.
             ~
!!! error TS1109: Expression expected.
            break await; // illegal, 'await' cannot be used as a label
                  ~~~~~
!!! error TS1003: Identifier expected.
                  ~~~~~
!!! error TS18037: Await expression cannot be used inside class static block.
                       ~
!!! error TS1109: Expression expected.
      }
      static {
        class E {
          constructor () { await; }
          method () { await; }
          get accessor () {
            await;
            return 1;
          }
          set accessor (v: any) {
            await;
          }
          propLambda = () => { await; }
          propFunc = function () { await; }
        }
      }
      static {
        class S {
          static method () { await; }
          static get accessor () {
            await;
            return 1;
          }
          static set accessor (v: any) {
            await;
          }
          static propLambda = () => { await; }
          static propFunc = function () { await; }
        }
      }
      static {
        function f (await) {}
        const ff = (await) => {}
                    ~~~~~
!!! error TS18037: Await expression cannot be used inside class static block.
                         ~
!!! error TS1109: Expression expected.
                           ~~
!!! error TS1005: ';' expected.
        const fff = await => {}
                    ~~~~~
!!! error TS18037: Await expression cannot be used inside class static block.
                          ~~
!!! error TS1109: Expression expected.
      }
    }